<resources>
    <string name="app_name">LetsChat</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="user_id">User ID</string>
    <string name="password">password</string>
    <string name="email">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
